# jokes-api

./: .gitignore  README.md  pyproject.toml  sqlite.db
frontend/: .eslintrc.cjs  index.html  package-lock.json  package.json
frontend/src/: App.tsx  main.tsx  util.tsx
jokes_api/: main.py  schema.py  service.py
